--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,12 @@ pandas==2.0.0
 joblib==1.2.0
 dateparser==1.1.8
 Flask-SQLAlchemy==3.0.3
+Werkzeug==2.3.4
+os-sys==2.1.4
+regex==2023.5.5
+python-dateutil==2.8.2
+DateTime==5.1
+pdfminer==20191125
+scikit-learn==1.2.2
+joblib==1.2.0
+python-csv==0.0.13
