--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ spacy==3.5.2
 nltk==3.8.1
 scikit-learn==1.2.2
 pyenchant==3.2.2
-fitz==0.0.1
+fitz==0.0.1.dev2
 PyMuPDF==1.22.1
 pandas==2.0.0
 joblib==1.2.0
